[gd_scene load_steps=12 format=2]

[ext_resource path="res://Components/Buildings/PowerSource/PowerSource.gd" type="Script" id=1]
[ext_resource path="res://Components/Buildings/PowerSource/building.png" type="Texture" id=2]
[ext_resource path="res://Components/Buildings/PowerSource/range.png" type="Texture" id=3]
[ext_resource path="res://Components/Buildings/PowerSource/impulse.png" type="Texture" id=4]
[ext_resource path="res://Components/Buildings/PowerSource/PowerSourceImpulse.tres" type="Animation" id=5]
[ext_resource path="res://Components/Healthbar/HealthBar.tscn" type="PackedScene" id=6]

[sub_resource type="CircleShape2D" id=1]
radius = 153.003

[sub_resource type="Animation" id=2]
resource_name = "Idle"
length = 2.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Visual/Range:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0.403922 ) ]
}

[sub_resource type="Animation" id=3]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Visual/Range:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Visual/Impulse:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0.4, 0.4 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Visual/Impulse:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Light2D:energy")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 1.0 ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Light2D:texture_scale")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.4 ]
}

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0.992157, 0, 1, 1 )

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0, 0, 0, 1 )

[node name="PowerSource" type="Area2D" groups=["PowerSource"]]
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Visual" type="Node2D" parent="."]

[node name="Range" type="Sprite" parent="Visual"]
visible = false
texture = ExtResource( 3 )

[node name="Sprite" type="Sprite" parent="Visual"]
texture = ExtResource( 2 )

[node name="Impulse" type="Sprite" parent="Visual"]
visible = false
scale = Vector2( 0.4, 0.4 )
texture = ExtResource( 4 )

[node name="Timer" type="Timer" parent="."]
wait_time = 10.0

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "Idle"
anims/Idle = SubResource( 2 )
anims/Impulse = ExtResource( 5 )
anims/RESET = SubResource( 3 )

[node name="Light2D" type="Light2D" parent="."]
position = Vector2( 0.5, 0 )
scale = Vector2( 1.00357, 1 )
texture = ExtResource( 4 )
texture_scale = 0.4

[node name="DistributionDelay" type="Timer" parent="."]
wait_time = 0.2
one_shot = true

[node name="TimeoutProgress" type="ProgressBar" parent="."]
margin_left = -22.0
margin_top = 10.0
margin_right = 22.0
margin_bottom = 14.0
custom_styles/fg = SubResource( 4 )
custom_styles/bg = SubResource( 5 )
step = 1.0
value = 100.0
percent_visible = false

[node name="HealthBar" parent="." instance=ExtResource( 6 )]

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="timeout" from="DistributionDelay" to="." method="_on_DistributionDelay_timeout"]
